--- a/pom.xml
+++ b/pom.xml
@@ -45,8 +45,7 @@
         <artifactId>maven-compiler-plugin</artifactId>
         <version>3.13.0</version>
         <configuration>
-          <source>25</source>
-          <target>25</target>
+          <release>17</release>
         </configuration>
       </plugin>
       <plugin>
