--- a/pom.xml
+++ b/pom.xml
@@ -64,7 +64,7 @@
             <!-- Default configuration for running with: mvn clean javafx:run -->
             <id>default-cli</id>
             <configuration>
-              <mainClass>com.awords.textkmpanalyzer/com.awords.textkmpanalyzer.HelloApplication</mainClass>
+              <mainClass>com.awords.textkmpanalyzer/com.awords.textkmpanalyzer.Launcher</mainClass>
               <launcher>app</launcher>
               <jlinkZipName>app</jlinkZipName>
               <jlinkImageName>app</jlinkImageName>
